Added support for kubejs.classfilter.txt. Put that in resources with +package.name or -package.name to allow or deny packages in mod